--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.7.1",
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "hchs-vue-charts": "^1.2.8",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.3.5",
+    "vue-axios": "^2.1.4",
+    "vue-chart-js": "^1.4.1",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5"
   },
