--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "apexcharts": "^3.8.1",
+    "apexcharts": "^3.8.2",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "hchs-vue-charts": "^1.2.8",
+    "highcharts-vue": "^1.3.5",
+    "json-server": "^0.15.0",
     "material-icons": "^0.3.1",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.4.0",
